# Market-Data-Collection-Publishing

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py  models.py
app/adapters/: ccxt_adapter.py
app/api/: endpoints.py
app/core/: config.py
app/services/: cache.py  fetcher.py
tests/: conftest.py  test_endpoints.py
